--- a/index.html
+++ b/index.html
@@ -12,27 +12,29 @@
 </head>
 
 <body>
-    <nav class="bg_dyellow ">
+    <nav class="bg_dyellow align-items-center py12 ">
         <div class="container">
-            <div class="d-flex justify-content-between align-items-center ">
-                <div class="tag">
-                    <img src="./assets/images/logo.png" alt="" class="w-100">
-                </div>
-                <label for="menu" class="menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </label>
-                <input type="checkbox" id="menu" hidden>
+            <div class=>
+                <div class="d-flex justify-content-between align-items-center ">
+                    <div class="tag">
+                        <img src="./assets/images/logo.png" alt="" class="w-100">
+                    </div>
+                    <label for="menu" class="menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </label>
+                    <input type="checkbox" id="menu" hidden>
 
-                <ul class="d-flex nav_gap align-items-center p-0 m-0 ul ">
-                    <li><a href="" class="navitem  nav_font text-black">Home</a></li>
-                    <li><a href="" class="nav_font navitem text-black">About Us</a></li>
-                    <li><a href="" class="nav_font navitem text-black">Tokenomics</a></li>
-                    <li><a href="" class="nav_font navitem text-black">Roadmap</a></li>
-                    <li><a href="" class="nav_font navitem text-black">Contact</a></li>
-                    <li> <button class="butn">Connect Wallet</button></li>
-                </ul>
+                    <ul class="d-flex nav_gap align-items-center p-0 m-0 ul ">
+                        <li><a href="" class="navitem  nav_font text-black">Home</a></li>
+                        <li><a href="" class="nav_font navitem text-black">About Us</a></li>
+                        <li><a href="" class="nav_font navitem text-black">Tokenomics</a></li>
+                        <li><a href="" class="nav_font navitem text-black">Roadmap</a></li>
+                        <li><a href="" class="nav_font navitem text-black">Contact</a></li>
+                        <li> <button class="butn">Connect Wallet</button></li>
+                    </ul>
+                </div>
             </div>
 
         </div>
@@ -77,7 +79,7 @@
     <div>
         <div class="bg-clr">
             <div class="container ">
-                <div class="row">
+                <div class="row align-items-center">
                     <div class="col-12 col-md-6 col-sm-12 col-lg-6">
                         <h2 class="it itfont">It was popularised</h2>
                         <p class="parafont para">Have you heard? We’re hiring! We have 3,333 working positions to
@@ -303,8 +305,8 @@
             </div>
         </div>
     </div>
-    <div class=" bg_dyellow  z-index-">
-        <div class="container bg_black">
+    <div class=" bg_dyellow  ">
+        <div class="my_container">
             <div class="d-flex align-items-center justify-content-center">
                 <p class="faq">FAQ</p>
             </div>
